[metadata]
description-file = README.md

[flake8]
max-line-length = 1024
doctests = True
ignore =
	E117
	E701
	W0108
	W191

[mypy]

[pydocstyle]

[pylint]
expected-line-ending-format = LF

disable =
	cell-var-from-loop,
	misplaced-comparison-constant,
	multiple-statements,
	protected-access,
	too-few-public-methods,
	too-many-branches,
	too-many-instance-attributes,
	too-many-locals,
	too-many-nested-blocks,
	too-many-statements,
	unnecessary-lambda,
	using-constant-test,
	C0330
indent-string='\t'
include-naming-hint=yes
overgeneral-exceptions=Exception
