[pylint.main]
init-hook='import sys; sys.path.append("./")'

expected-line-ending-format = LF

disable =
	line-too-long,
	cell-var-from-loop,
	multiple-statements,
	protected-access,
	too-few-public-methods,
	too-many-branches,
	too-many-instance-attributes,
	too-many-locals,
	too-many-nested-blocks,
	too-many-statements,
	unnecessary-lambda,
	using-constant-test,
	unsubscriptable-object,
	invalid-name,
	duplicate-code,
	super-init-not-called
indent-string='\t'
include-naming-hint=yes
overgeneral-exceptions=Exception

[metadata]
description_file = README.md

[flake8]
max-line-length = 1024
doctests = True
ignore =
	E117
	E701
	W0108
	W191

[mypy]
disallow_untyped_defs = True

[pydocstyle]
